plugins {
    id 'java-library'
    id 'maven-publish'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'com.teamdev.jxbrowser' version '1.0.1'
}

group = 'wildepizza.com.github.blizzity'
version = '1.0'
description = 'blizzity'

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

javafx {
    version = '17.0.6'
    modules = [
            'javafx.controls',
            'javafx.fxml',
            'javafx.graphics',
            'javafx.base',
            'javafx.media',
            'javafx.swing',
            'javafx.web'
    ]
}
jxbrowser {
    version '7.37.2'
}
dependencies {
    implementation jxbrowser.javafx
    implementation jxbrowser.core
    implementation 'org.apache.httpcomponents:httpclient:latest.release'
    implementation 'org.json:json:latest.release'
    implementation "com.sparkjava:spark-core:latest.release"
    implementation "org.apache.spark:spark-core_2.12:latest.release"
}